--- a/Project_2_A.ipynb
+++ b/Project_2_A.ipynb
@@ -41,17 +41,17 @@
       "metadata": {
         "id": "OgtOVUVT1uAZ",
         "colab_type": "code",
+        "outputId": "25577ee0-3638-46a9-bb6b-dd6bca11302c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "25577ee0-3638-46a9-bb6b-dd6bca11302c"
+        }
       },
       "source": [
         "print(1434)\n",
         "print(\"Joe was here\")"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,8 +78,11 @@
       "metadata": {
         "id": "_igH76cS1uAf",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "63cdeab7-835c-4eea-d59e-b2136f66be79"
+        "outputId": "882c7899-dedf-462e-edae-6c3ad2ecc293",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -88,22 +91,23 @@
         "import os\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "path = \"./data/\"\n",
-        "\n",
-        "filename = os.path.join(path, \"gun_violence.csv\")\n",
-        "data = pd.read_csv(filename, na_values=['NA', '?'])\n",
+        "#Get file stored in my github\n",
+        "url = 'https://raw.githubusercontent.com/josephdonati/CSC-177---Project-2/master/Data/gun_violence_lite.csv'\n",
+        "data = pd.read_csv(url)\n",
+        "print(\"Data recieved!\")\n",
         "\n",
         "print('Number of instances = %d' % (data.shape[0]))\n",
         "print('Number of attributes = %d' % (data.shape[1]))\n",
         "data.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Data recieved!\n",
             "Number of instances = 239677\n",
-            "Number of attributes = 29\n"
+            "Number of attributes = 7\n"
           ],
           "name": "stdout"
         },
@@ -129,248 +133,79 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>incident_id</th>\n",
               "      <th>date</th>\n",
               "      <th>state</th>\n",
               "      <th>city_or_county</th>\n",
-              "      <th>address</th>\n",
               "      <th>n_killed</th>\n",
               "      <th>n_injured</th>\n",
-              "      <th>incident_url</th>\n",
-              "      <th>source_url</th>\n",
-              "      <th>incident_url_fields_missing</th>\n",
-              "      <th>...</th>\n",
-              "      <th>participant_age</th>\n",
-              "      <th>participant_age_group</th>\n",
-              "      <th>participant_gender</th>\n",
-              "      <th>participant_name</th>\n",
-              "      <th>participant_relationship</th>\n",
-              "      <th>participant_status</th>\n",
-              "      <th>participant_type</th>\n",
-              "      <th>sources</th>\n",
-              "      <th>state_house_district</th>\n",
+              "      <th>n_guns_involved</th>\n",
               "      <th>state_senate_district</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>461105</td>\n",
               "      <td>2013-01-01</td>\n",
               "      <td>Pennsylvania</td>\n",
               "      <td>Mckeesport</td>\n",
-              "      <td>1506 Versailles Avenue and Coursin Street</td>\n",
               "      <td>0</td>\n",
               "      <td>4</td>\n",
-              "      <td>http://www.gunviolencearchive.org/incident/461105</td>\n",
-              "      <td>http://www.post-gazette.com/local/south/2013/0...</td>\n",
-              "      <td>False</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0::20</td>\n",
-              "      <td>0::Adult 18+||1::Adult 18+||2::Adult 18+||3::A...</td>\n",
-              "      <td>0::Male||1::Male||3::Male||4::Female</td>\n",
-              "      <td>0::Julian Sims</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0::Arrested||1::Injured||2::Injured||3::Injure...</td>\n",
-              "      <td>0::Victim||1::Victim||2::Victim||3::Victim||4:...</td>\n",
-              "      <td>http://pittsburgh.cbslocal.com/2013/01/01/4-pe...</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>460726</td>\n",
               "      <td>2013-01-01</td>\n",
               "      <td>California</td>\n",
               "      <td>Hawthorne</td>\n",
-              "      <td>13500 block of Cerise Avenue</td>\n",
               "      <td>1</td>\n",
               "      <td>3</td>\n",
-              "      <td>http://www.gunviolencearchive.org/incident/460726</td>\n",
-              "      <td>http://www.dailybulletin.com/article/zz/201301...</td>\n",
-              "      <td>False</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0::20</td>\n",
-              "      <td>0::Adult 18+||1::Adult 18+||2::Adult 18+||3::A...</td>\n",
-              "      <td>0::Male</td>\n",
-              "      <td>0::Bernard Gillis</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>0::Killed||1::Injured||2::Injured||3::Injured</td>\n",
-              "      <td>0::Victim||1::Victim||2::Victim||3::Victim||4:...</td>\n",
-              "      <td>http://losangeles.cbslocal.com/2013/01/01/man-...</td>\n",
-              "      <td>62.0</td>\n",
               "      <td>35.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>478855</td>\n",
               "      <td>2013-01-01</td>\n",
               "      <td>Ohio</td>\n",
               "      <td>Lorain</td>\n",
-              "      <td>1776 East 28th Street</td>\n",
               "      <td>1</td>\n",
               "      <td>3</td>\n",
-              "      <td>http://www.gunviolencearchive.org/incident/478855</td>\n",
-              "      <td>http://chronicle.northcoastnow.com/2013/02/14/...</td>\n",
-              "      <td>False</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0::25||1::31||2::33||3::34||4::33</td>\n",
-              "      <td>0::Adult 18+||1::Adult 18+||2::Adult 18+||3::A...</td>\n",
-              "      <td>0::Male||1::Male||2::Male||3::Male||4::Male</td>\n",
-              "      <td>0::Damien Bell||1::Desmen Noble||2::Herman Sea...</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0::Injured, Unharmed, Arrested||1::Unharmed, A...</td>\n",
-              "      <td>0::Subject-Suspect||1::Subject-Suspect||2::Vic...</td>\n",
-              "      <td>http://www.morningjournal.com/general-news/201...</td>\n",
-              "      <td>56.0</td>\n",
+              "      <td>2.0</td>\n",
               "      <td>13.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>478925</td>\n",
               "      <td>2013-01-05</td>\n",
               "      <td>Colorado</td>\n",
               "      <td>Aurora</td>\n",
-              "      <td>16000 block of East Ithaca Place</td>\n",
               "      <td>4</td>\n",
               "      <td>0</td>\n",
-              "      <td>http://www.gunviolencearchive.org/incident/478925</td>\n",
-              "      <td>http://www.dailydemocrat.com/20130106/aurora-s...</td>\n",
-              "      <td>False</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0::29||1::33||2::56||3::33</td>\n",
-              "      <td>0::Adult 18+||1::Adult 18+||2::Adult 18+||3::A...</td>\n",
-              "      <td>0::Female||1::Male||2::Male||3::Male</td>\n",
-              "      <td>0::Stacie Philbrook||1::Christopher Ratliffe||...</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>0::Killed||1::Killed||2::Killed||3::Killed</td>\n",
-              "      <td>0::Victim||1::Victim||2::Victim||3::Subject-Su...</td>\n",
-              "      <td>http://denver.cbslocal.com/2013/01/06/officer-...</td>\n",
-              "      <td>40.0</td>\n",
               "      <td>28.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>478959</td>\n",
               "      <td>2013-01-07</td>\n",
               "      <td>North Carolina</td>\n",
               "      <td>Greensboro</td>\n",
-              "      <td>307 Mourning Dove Terrace</td>\n",
               "      <td>2</td>\n",
               "      <td>2</td>\n",
-              "      <td>http://www.gunviolencearchive.org/incident/478959</td>\n",
-              "      <td>http://www.journalnow.com/news/local/article_d...</td>\n",
-              "      <td>False</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0::18||1::46||2::14||3::47</td>\n",
-              "      <td>0::Adult 18+||1::Adult 18+||2::Teen 12-17||3::...</td>\n",
-              "      <td>0::Female||1::Male||2::Male||3::Female</td>\n",
-              "      <td>0::Danielle Imani Jameison||1::Maurice Eugene ...</td>\n",
-              "      <td>3::Family</td>\n",
-              "      <td>0::Injured||1::Injured||2::Killed||3::Killed</td>\n",
-              "      <td>0::Victim||1::Victim||2::Victim||3::Subject-Su...</td>\n",
-              "      <td>http://myfox8.com/2013/01/08/update-mother-sho...</td>\n",
-              "      <td>62.0</td>\n",
+              "      <td>2.0</td>\n",
               "      <td>27.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>5 rows × 29 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "   incident_id        date           state city_or_county  \\\n",
-              "0       461105  2013-01-01    Pennsylvania     Mckeesport   \n",
-              "1       460726  2013-01-01      California      Hawthorne   \n",
-              "2       478855  2013-01-01            Ohio         Lorain   \n",
-              "3       478925  2013-01-05        Colorado         Aurora   \n",
-              "4       478959  2013-01-07  North Carolina     Greensboro   \n",
+              "         date           state  ... n_guns_involved  state_senate_district\n",
+              "0  2013-01-01    Pennsylvania  ...             NaN                    NaN\n",
+              "1  2013-01-01      California  ...             NaN                   35.0\n",
+              "2  2013-01-01            Ohio  ...             2.0                   13.0\n",
+              "3  2013-01-05        Colorado  ...             NaN                   28.0\n",
+              "4  2013-01-07  North Carolina  ...             2.0                   27.0\n",
               "\n",
-              "                                     address  n_killed  n_injured  \\\n",
-              "0  1506 Versailles Avenue and Coursin Street         0          4   \n",
-              "1               13500 block of Cerise Avenue         1          3   \n",
-              "2                      1776 East 28th Street         1          3   \n",
-              "3           16000 block of East Ithaca Place         4          0   \n",
-              "4                  307 Mourning Dove Terrace         2          2   \n",
-              "\n",
-              "                                        incident_url  \\\n",
-              "0  http://www.gunviolencearchive.org/incident/461105   \n",
-              "1  http://www.gunviolencearchive.org/incident/460726   \n",
-              "2  http://www.gunviolencearchive.org/incident/478855   \n",
-              "3  http://www.gunviolencearchive.org/incident/478925   \n",
-              "4  http://www.gunviolencearchive.org/incident/478959   \n",
-              "\n",
-              "                                          source_url  \\\n",
-              "0  http://www.post-gazette.com/local/south/2013/0...   \n",
-              "1  http://www.dailybulletin.com/article/zz/201301...   \n",
-              "2  http://chronicle.northcoastnow.com/2013/02/14/...   \n",
-              "3  http://www.dailydemocrat.com/20130106/aurora-s...   \n",
-              "4  http://www.journalnow.com/news/local/article_d...   \n",
-              "\n",
-              "   incident_url_fields_missing  ...                    participant_age  \\\n",
-              "0                        False  ...                              0::20   \n",
-              "1                        False  ...                              0::20   \n",
-              "2                        False  ...  0::25||1::31||2::33||3::34||4::33   \n",
-              "3                        False  ...         0::29||1::33||2::56||3::33   \n",
-              "4                        False  ...         0::18||1::46||2::14||3::47   \n",
-              "\n",
-              "                               participant_age_group  \\\n",
-              "0  0::Adult 18+||1::Adult 18+||2::Adult 18+||3::A...   \n",
-              "1  0::Adult 18+||1::Adult 18+||2::Adult 18+||3::A...   \n",
-              "2  0::Adult 18+||1::Adult 18+||2::Adult 18+||3::A...   \n",
-              "3  0::Adult 18+||1::Adult 18+||2::Adult 18+||3::A...   \n",
-              "4  0::Adult 18+||1::Adult 18+||2::Teen 12-17||3::...   \n",
-              "\n",
-              "                            participant_gender  \\\n",
-              "0         0::Male||1::Male||3::Male||4::Female   \n",
-              "1                                      0::Male   \n",
-              "2  0::Male||1::Male||2::Male||3::Male||4::Male   \n",
-              "3         0::Female||1::Male||2::Male||3::Male   \n",
-              "4       0::Female||1::Male||2::Male||3::Female   \n",
-              "\n",
-              "                                    participant_name  \\\n",
-              "0                                     0::Julian Sims   \n",
-              "1                                  0::Bernard Gillis   \n",
-              "2  0::Damien Bell||1::Desmen Noble||2::Herman Sea...   \n",
-              "3  0::Stacie Philbrook||1::Christopher Ratliffe||...   \n",
-              "4  0::Danielle Imani Jameison||1::Maurice Eugene ...   \n",
-              "\n",
-              "   participant_relationship  \\\n",
-              "0                       NaN   \n",
-              "1                       NaN   \n",
-              "2                       NaN   \n",
-              "3                       NaN   \n",
-              "4                 3::Family   \n",
-              "\n",
-              "                                  participant_status  \\\n",
-              "0  0::Arrested||1::Injured||2::Injured||3::Injure...   \n",
-              "1      0::Killed||1::Injured||2::Injured||3::Injured   \n",
-              "2  0::Injured, Unharmed, Arrested||1::Unharmed, A...   \n",
-              "3         0::Killed||1::Killed||2::Killed||3::Killed   \n",
-              "4       0::Injured||1::Injured||2::Killed||3::Killed   \n",
-              "\n",
-              "                                    participant_type  \\\n",
-              "0  0::Victim||1::Victim||2::Victim||3::Victim||4:...   \n",
-              "1  0::Victim||1::Victim||2::Victim||3::Victim||4:...   \n",
-              "2  0::Subject-Suspect||1::Subject-Suspect||2::Vic...   \n",
-              "3  0::Victim||1::Victim||2::Victim||3::Subject-Su...   \n",
-              "4  0::Victim||1::Victim||2::Victim||3::Subject-Su...   \n",
-              "\n",
-              "                                             sources state_house_district  \\\n",
-              "0  http://pittsburgh.cbslocal.com/2013/01/01/4-pe...                  NaN   \n",
-              "1  http://losangeles.cbslocal.com/2013/01/01/man-...                 62.0   \n",
-              "2  http://www.morningjournal.com/general-news/201...                 56.0   \n",
-              "3  http://denver.cbslocal.com/2013/01/06/officer-...                 40.0   \n",
-              "4  http://myfox8.com/2013/01/08/update-mother-sho...                 62.0   \n",
-              "\n",
-              "  state_senate_district  \n",
-              "0                   NaN  \n",
-              "1                  35.0  \n",
-              "2                  13.0  \n",
-              "3                  28.0  \n",
-              "4                  27.0  \n",
-              "\n",
-              "[5 rows x 29 columns]"
+              "[5 rows x 7 columns]"
             ]
           },
           "metadata": {
