--- a/Project_2_B.ipynb
+++ b/Project_2_B.ipynb
@@ -29,7 +29,11 @@
       "metadata": {
         "id": "BPLmTqHszFMh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "9264ef5a-5d45-4164-c396-ff7ed128ef50"
       },
       "source": [
         "import pandas as pd\n",
@@ -39,13 +43,150 @@
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "#Get file stored in my github\n",
-        "url = 'https://raw.githubusercontent.com/josephdonati/CSC-177---Project-2/master/Data/gun_violence_lite.csv'\n",
+        "url = 'https://raw.githubusercontent.com/josephdonati/CSC-177---Project-2/master/Data/Admission_Predict_Ver1.1_small_data_set_for_Linear_Regression.csv'\n",
         "data = pd.read_csv(url)\n",
         "print(\"Data recieved!\")\n",
         "\n",
         "print('Number of instances = %d' % (data.shape[0]))\n",
         "print('Number of attributes = %d' % (data.shape[1]))\n",
         "data.head()"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Data recieved!\n",
+            "Number of instances = 500\n",
+            "Number of attributes = 9\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Serial No.</th>\n",
+              "      <th>GRE Score</th>\n",
+              "      <th>TOEFL Score</th>\n",
+              "      <th>University Rating</th>\n",
+              "      <th>SOP</th>\n",
+              "      <th>LOR</th>\n",
+              "      <th>CGPA</th>\n",
+              "      <th>Research</th>\n",
+              "      <th>Chance of Admit</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>337</td>\n",
+              "      <td>118</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>9.65</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.92</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>324</td>\n",
+              "      <td>107</td>\n",
+              "      <td>4</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>8.87</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.76</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>316</td>\n",
+              "      <td>104</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>8.00</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.72</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>322</td>\n",
+              "      <td>110</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>8.67</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.80</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>314</td>\n",
+              "      <td>103</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>8.21</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.65</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Serial No.  GRE Score  TOEFL Score  ...  CGPA  Research  Chance of Admit \n",
+              "0           1        337          118  ...  9.65         1              0.92\n",
+              "1           2        324          107  ...  8.87         1              0.76\n",
+              "2           3        316          104  ...  8.00         1              0.72\n",
+              "3           4        322          110  ...  8.67         1              0.80\n",
+              "4           5        314          103  ...  8.21         0              0.65\n",
+              "\n",
+              "[5 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AA1BV-ea3Vaw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
